--- a/styles.css
+++ b/styles.css
@@ -79,8 +79,77 @@ h6,
 p {
     margin-top: 0;
 }
+/* шпора
+<button class="modal-btn-close" type="button">Close</button>
+        <h2>Замовити дзвінок</h2>
+        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+        <form name="modal-form" autocomplete="off">
+          <div class="form-field">
+            <input
+              class="form-input"
+              type="text"
+              name="user-name"
+              id="user-name"
+              placeholder="Ім'я"
+              minlength="2"
+              maxlength="20"
+              required
+            />
+            <label class="form-label visually-hidden" for="user-name"
+              >Ім'я</label
+            >
+          </div>
+
+          <div class="form-field">
+            <label class="form-label visually-hidden" for="user-tel"
+              >Телефон</label
+            >
+            <input
+              class="form-input"
+              type="tel"
+              name="user-tel"
+              id="user-tel"
+              placeholder="Телефон"
+              pattern="^\+[0-9]{12}"
+              required
+            />
+          </div>
+          <div class="form-field">
+            <input
+              class="form-input"
+              type="email"
+              name="user-email"
+              id="user-email"
+              placeholder="Електронна пошта"
+              required
+            />
+            <label class="form-label visually-hidden" for="user-email"
+              >Електронна пошта</label
+            >
+          </div>
+
+          <button class="button form-button" type="submit">
+            Замовити дзвінок
+          </button>
+          <p class="form-terms">
+            Натискаючи на кнопку я погоджуюсь
+            <a class="form-terms-link" href="#">з політикою конфіденційності</a>
+          </p>
+        </form>
+      </div>
+    </div> */
 
 
+
+
+.visually-hidden {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
 
 ul {
     list-style-type: none;
@@ -138,6 +207,10 @@ body {
 .link {
     text-decoration: none;
     line-height: 1.5;
+    transition-property: text-shadow;
+    transition-property: color;
+    transition-timing-function: linear;
+    transition-duration: .2s;
 }
 
 .link:hover {
@@ -159,6 +232,10 @@ text-shadow: 1px 0 0 currentColor;
     width: 219px;
     height: 53px;
     cursor: pointer;
+    transition-property: background-color;
+        transition-property: color;
+        transition-duration: .2s;
+        transition-timing-function: linear;
 
 }
 
@@ -181,6 +258,11 @@ text-shadow: 1px 0 0 currentColor;
     cursor: pointer;
     flex-shrink: 0;
     fill: var(--color-primary-blue-dark);
+    transition-property: background-color;
+        transition-property: fill;
+        transition-property: border;
+        transition-duration: .2s;
+        transition-timing-function: linear;
 }
 
 .carousel-button:hover {
@@ -220,19 +302,37 @@ text-shadow: 1px 0 0 currentColor;
     /* translate: 20px 0; */
     transform: translateX(20px);
     max-width: 64px;
-
-
+animation-name: spin;
+animation-duration:10s;
+animation-iteration-count: infinite;
+animation-timing-function: linear;
 }
+@keyframes spin {
+    from {
+transform: rotate(0deg);
 
+    }
+    to {
+transform: rotate(360deg);
+
+    }
+}
 .star-2 {
 
     margin-top: 9px;
-
+animation-name: spin;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 
 .star-3 {
     margin-left: 140px;
     margin-top: 270px;
+    animation-name: spin;
+        animation-duration: 10s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
 }
 
 .about-us-photos-top {
@@ -361,6 +461,10 @@ text-shadow: 1px 0 0 currentColor;
     line-height: 1.17;
     font-size: 16px;
     text-decoration: none;
+    transition-property: text-shadow;
+        transition-property: color;
+        transition-timing-function: linear;
+        transition-duration: .2s;
 }
 
 .footer-link:hover {
@@ -467,4 +571,73 @@ text-shadow: 1px 0 0 currentColor;
     border: none;
     border-radius: 32px;
 
+}
+
+/* Modal */
+
+.modal-title {
+    font-family: 'Play', sans-serif;
+        font-weight: 700;
+        font-size: 64px;
+        line-height: 1.16;
+        text-align: center;
+        color: var(--color-primary-white);
+        margin: 42px 144px;
+}
+
+.backdrop {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
+    transition: opacity .3s, visibility .3s;
+}
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+.modal {
+    max-width: 880px;
+    max-height: 880px;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color-primary-blue-dark);
+    border-radius: 48px;
+    background-image: url(./images/background-footer.svg);
+}
+.modal-btn-close {
+
+position: absolute;
+top: 50px;
+right: 50px;
+}
+
+.modal-button:hover{
+color: var(--color-primary-white);
+}
+.modal-text{
+    text-align: center;
+    color: var(--color-secondary-grey-light);
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+}
+
+.modal-link {
+color: var(--color-secondary-grey-light);
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+}
+.modal-link:hover {
+    text-shadow: 1px 0 0 currentColor;
+        color: var(--color-secondary-grey-light);
 }
